# general-repo

./: README.md  test_notebook.ipynb  welch_t_test.py
ab-metric-eval/: LICENSE  README.md  pyproject.toml
ab-metric-eval/ab_metric_eval/: __init__.py  analysis.py  schemas.py
custom_welch_t_test/: __init__.py  core.py  exceptions.py  utils.py
notebook_env/: pyvenv.cfg
