[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ab-metric-eval"
version = "0.1.1"
description = "Statistical analysis tools for A/B experiment metric evaluation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["a/b testing", "experiment analysis", "statistics", "hypothesis testing", "cuped", "causal inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.19",
    "pandas>=1.0",
    "scipy>=1.5",
    "statsmodels>=0.12",
    "matplotlib>=3.3",
    "seaborn>=0.11",
]

[project.urls]
"Homepage" = "https://github.com/five-blue-tiles/general-repo/tree/main/ab-metric-eval"
"Bug Tracker" = "https://github.com/five-blue-tiles/general-repo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ab_metric_eval*"]
